[gd_scene load_steps=22 format=2]

[ext_resource path="res://enemy.gd" type="Script" id=1]
[ext_resource path="res://sprites/enemy/red/1.png" type="Texture" id=2]
[ext_resource path="res://sprites/enemy/red/2.png" type="Texture" id=3]
[ext_resource path="res://sprites/reactor/red_reactor_particle.png" type="Texture" id=4]
[ext_resource path="res://sprites/enemy/green/1.png" type="Texture" id=5]
[ext_resource path="res://sprites/enemy/green/2.png" type="Texture" id=6]
[ext_resource path="res://sprites/reactor/green_reactor_particle.png" type="Texture" id=7]
[ext_resource path="res://sprites/explode/01.png" type="Texture" id=8]
[ext_resource path="res://sprites/explode/02.png" type="Texture" id=9]
[ext_resource path="res://sprites/explode/03.png" type="Texture" id=10]
[ext_resource path="res://font/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://fx/hit.ogg" type="AudioStream" id=12]
[ext_resource path="res://fx/hit_2.ogg" type="AudioStream" id=13]
[ext_resource path="res://fx/hit_3.ogg" type="AudioStream" id=14]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="ParticlesMaterial" id=2]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = false
spread = 45.0
flatness = 0.0
gravity = Vector3( 0, -9.8, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.0
angular_velocity = 7.37083e-043
angular_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 1.0
scale_random = 0.0
color = Color( 1, 1, 1, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false

[sub_resource type="CanvasItemMaterial" id=3]

render_priority = 0
next_pass = SubResource( 2 )
blend_mode = 1
light_mode = 0

[sub_resource type="ParticlesMaterial" id=4]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 45.0
flatness = 0.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 1.0
scale_random = 0.0
color = Color( 1, 1, 1, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false

[sub_resource type="SpriteFrames" id=5]

animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]

animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": false,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="DynamicFont" id=7]

size = 25
use_mipmaps = false
use_filter = false
font_data = ExtResource( 11 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="enemy" type="RigidBody2D"]

input_pickable = true
collision_layer = 1
collision_mask = 1
mode = 3
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = 0.1
angular_velocity = 0.0
angular_damp = 1.0
script = ExtResource( 1 )
min_speed = 400
max_speed = 1000

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="." index="0"]

build_mode = 0
polygon = PoolVector2Array( 8.77913, 16.1426, 3.67591, 39.919, 21.0732, 49.1976, 23.0449, 53.9528, 26.7564, 55.1126, 36.2669, 56.0405, 40.0943, 54.1848, 42.6459, 48.8496, 60.6232, 39.3391, 57.0308, 17.4937, 49.3729, 12.5472, 36.4989, 18.1143, 26.0605, 18.1143, 16.202, 12.7791 )

[node name="red" type="AnimatedSprite" parent="." index="1"]

frames = SubResource( 1 )
animation = "default"
playing = true
centered = false
flip_v = true

[node name="reactor" type="Particles2D" parent="red" index="0"]

modulate = Color( 0.238281, 0.176849, 0.176849, 1 )
material = SubResource( 3 )
position = Vector2( 32.1538, 16.6153 )
rotation = 3.14159
scale = Vector2( 0.4885, 0.410508 )
emitting = true
amount = 10
lifetime = 1.0
one_shot = false
preprocess = 1.0
speed_scale = 2.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 4 )
texture = ExtResource( 4 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Material", "Process Material", "Textures", "Time", "Transform", "Visibility", "Z Index" ]

[node name="green" type="AnimatedSprite" parent="." index="2"]

frames = SubResource( 5 )
animation = "default"
playing = true
centered = false
flip_v = true

[node name="reactor" type="Particles2D" parent="green" index="0"]

modulate = Color( 0.605469, 0.353313, 0.184479, 1 )
material = SubResource( 3 )
position = Vector2( 32.1538, 16.6153 )
rotation = 3.14159
scale = Vector2( 0.4885, 0.410508 )
emitting = true
amount = 10
lifetime = 1.0
one_shot = false
preprocess = 1.0
speed_scale = 2.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 4 )
texture = ExtResource( 7 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Material", "Process Material", "Textures", "Time", "Transform", "Visibility", "Z Index" ]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="3"]

position = Vector2( 36.5383, 49.9998 )
rect = Rect2( -10, -10, 20, 20 )

[node name="explosion" type="AnimatedSprite" parent="." index="4"]

visible = false
position = Vector2( 34.1891, 11.4913 )
scale = Vector2( 0.734971, 0.660836 )
frames = SubResource( 6 )
animation = "default"
_sections_unfolded = [ "Visibility" ]

[node name="score" type="RichTextLabel" parent="." index="5"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 26.0
margin_top = -27.0
margin_right = 106.0
margin_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = SubResource( 7 )
bbcode_enabled = true
bbcode_text = "[center]+10[/center]"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "+10"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "Material", "Visibility", "custom_fonts" ]

[node name="hit" type="AudioStreamPlayer2D" parent="." index="6"]

visible = false
stream = ExtResource( 12 )
volume_db = 5.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="hit2" type="AudioStreamPlayer2D" parent="." index="7"]

visible = false
stream = ExtResource( 13 )
volume_db = 5.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="hit3" type="AudioStreamPlayer2D" parent="." index="8"]

visible = false
stream = ExtResource( 14 )
volume_db = 5.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]


